# gameskel

./: CMakeLists.txt  ChangeLog.md  Doxyfile.cmake  README.md  astylerc  main.cc
code/: CMakeLists.txt  main.cc
code/game/: Animation.cc  Animation.h  Camera.cc  Entity.h  Vector.h  WindowGeometry.h
game/: Assets.cc  Assets.h  Camera.cc  Camera.h  Event.h  EventManager.cc  EventManager.h  WindowGeometry.cc  WindowSettings.h
src/: CMakeLists.txt  CPackConfig.cmake  Doxyfile.cmake  astylerc
src/games/: CMakeLists.txt  config.h.in  example_animation.cc  example_particles.cc  main.cc
src/games/examples/: CMakeLists.txt  example_animation.cc
src/games/pong/: CMakeLists.txt  pong.cc
src/games/pong/local/: Ball.cc  Ball.h  Ground.cc  Ground.h  Racket.cc  Racket.h  Rules.cc  Rules.h
src/games/pong_net/: CMakeLists.txt  pong_client.cc  pong_server.cc
src/games/pong_net/client/: ClientBall.cc  ClientBall.h  ClientGround.cc  ClientGround.h  ClientPoints.cc  ClientPoints.h  ClientRacket.cc  ClientRacket.h
src/games/pong_net/common/: CommonBall.h  CommonGround.h  CommonRacket.h  Config.h
src/games/pong_net/protocol/: Request.cc  Request.h  Response.cc  Response.h
src/games/pong_net/server/: Player.h  ServerBall.cc  ServerBall.h  ServerConfig.h  ServerRacket.cc  ServerRacket.h  ServerRules.cc  ServerRules.h
src/games/template/: CMakeLists.txt  main.cc
src/include/game/: Animation.h  Entity.h  Event.h  Particle.h  Random.h  Resource.h  World.h
src/include/game/base/: Assets.h  Clock.h  Event.h  Log.h  Queue.h  Random.h  Vector.h
src/include/game/graphics/: Animation.h  Control.h  Entity.h  Group.h  World.h
src/include/game/model/: Body.h  Model.h  Physics.h  Vector.h  World.h
src/lib/: Animation.cc  CMakeLists.txt  Entity.cc  Event.cc  Particle.cc  Random.cc  Resource.cc  World.cc
src/lib/base/: Assets.cc  CMakeLists.txt  Clock.cc  Log.cc  Random.cc
src/lib/graphics/: Action.cc  Animation.cc  CMakeLists.txt  Control.cc  Entity.cc  Group.cc  Resource.cc  World.cc
src/lib/model/: Body.cc  CMakeLists.txt  Model.cc  Physics.cc  World.cc
src/share/: README
src/share/game/: FILES
src/template/: CMakeLists.txt  config.h.in  main.cc
src/template/game/: Action.cc  Action.h  Animation.cc  Animation.h  Assets.cc  Assets.h  Body.cc  Body.h  Camera.cc  Clock.cc  Clock.h  Control.cc  Control.h  Entity.cc  Entity.h  EntityManager.h  Event.cc  Event.h  Group.cc  Group.h  Id.h  Log.cc  Model.cc  Physics.cc  Physics.h  Queue.h  Random.cc  Random.h  Resource.cc  Resource.h  Resources.cc  Resources.h  Singleton.h  Vector.h  World.cc  World.h
