set(LIBGAMEMODEL0_SRC
  Body.cc
  Model.cc
  Physics.cc
  World.cc
)

add_library(gamemodel0 SHARED
  ${LIBGAMEMODEL0_SRC}
)

set_target_properties(gamemodel0
  PROPERTIES
  VERSION ${CPACK_PACKAGE_VERSION}
  SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR}
)

install(
  TARGETS gamemodel0
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
)
